--- a/public/about.html
+++ b/public/about.html
@@ -11,8 +11,8 @@
 
     <!-- Favicons -->
 
-<link href="/img/favicon.ico" rel="icon">
-<link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/img/favicon.ico" rel="icon">
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -90,10 +90,10 @@
                         <div class="row">
                             <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
                                 <div class="about-img">
-                                
-                                    <img src="/img/company.jpg"  alt="">
-                                    <img src="/img/company-two.jpg" alt="">
-                                    <img src="/img/product.jpg" alt="">
+
+                                    <img src="./img/company.JPG" alt="">
+                                    <img src="./img/company-two.JPG" alt="">
+                                    <img src="./img/product.JPG" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
